@@ -1,4 +1,5 @@
 
+  * Allow to move items in playlists using dragging with mouse
   * Fixed bug with library paths. After remove a library path the files
     kept in the library.
   * Added drag&drop support to playlists and podcasts panels
